# project

./: CMakeLists.txt  CMakeSettings.json  cmake_install.cmake  manifest.rc  project.ilk
project/: CMakeLists.txt  project.cpp  project.h
